--- a/README.rdoc
+++ b/README.rdoc
@@ -23,7 +23,7 @@ Defines a method_info method on every Object which will show the methods that ea
 * :module_color Set colour for a line printing out a module (only used when :enable_colors is true)
 * :message_color Set colour for a line with a message (only used when :enable_colors is true)
 * :methods_color Set colour for a line with methods (only used when :enable_colors is true)
-
+* :match Shows only those methods that match this option. It's value can be either a string or a regexp (default: nil)
 You can set default options which will override the inbuild defaults. Here is an example which
 will hide the methods defined on all instances of Object and show colour in the output (this
 requires the ansi-termcolor gem):
